✨ 通知機能の細部実装
