# backend/app/controllers/api/v1/notifications_controller.rb
@@ -6,7 +6,26 @@ module Api
       before_action :authenticate_user, only: %i[current_user_notifications]
 
       def current_user_notifications
-        @notifications = Notification.where(receiver_id: current_user.id)
+        @notifications = Notification.where(receiver_id: current_user.id).map do |notification|
+          {
+            id: notification.id,
+            review_id: notification.review_id,
+            sender: {
+              id: notification.sender_id,
+              name: User.find(notification.sender_id).name,
+              avatar: User.find(notification.sender_id).avatar
+            },
+            receiver: {
+              id: notification.receiver_id,
+              name: User.find(notification.receiver_id).name,
+              avatar: User.find(notification.receiver_id).avatar
+            },
+            action: notification.action,
+            checked: notification.checked,
+            created_at: notification.created_at,
+            updated_at: notification.updated_at
+          }
+        end
         render json: @notifications, status: :ok
       end
 
