# backend/openapi.yml
@@ -420,8 +420,14 @@ paths:
                   value:
                     - id: 1
                       review_id: 1
-                      sender_id: 1
-                      receiver_id: 2
+                      sender:
+                        id: 1
+                        name: daiki0381
+                        avatar: 'https://avatars.githubusercontent.com'
+                      receiver:
+                        id: 2
+                        name: daiki0218
+                        avatar: 'https://avatars.githubusercontent.com'
                       action: feedback
                       checked: true
                       created_at: '2022-10-10T10::10'
@@ -697,10 +703,24 @@ components:
           type: integer
         review_id:
           type: integer
-        sender_id:
-          type: integer
-        receiver_id:
-          type: integer
+        sender:
+          type: object
+          properties:
+            id:
+              type: integer
+            name:
+              type: string
+            avatar:
+              type: string
+        receiver:
+          type: object
+          properties:
+            id:
+              type: integer
+            name:
+              type: string
+            avatar:
+              type: string
         action:
           type: string
         checked:
@@ -713,8 +733,14 @@ components:
         example-1:
           id: 1
           review_id: 1
-          sender_id: 1
-          receiver_id: 2
+          sender:
+            id: 1
+            name: daiki0381
+            avatar: 'https://avatars.githubusercontent.com'
+          receiver:
+            id: 2
+            name: daiki0218
+            avatar: 'https://avatars.githubusercontent.com'
           action: feedback
           checked: true
           created_at: '2022-10-10T10::10'
